[b]Version 0.6.11[/b]:

(2012-01-22)
 * Don't show in Windows the tv and radio menus, as they were intended for dvb-t and as far as I know
   mplayer doesn't support it on Windows. 

(2012-01-13 - 2012-01-21)
 * New favorite menu, where you can add your favorite videos, music, streams,
   youtube videos... It's also possible to add submenus.

(2012-01-20)
 * Use QtLockedFile instead of QxtFileLock, so we can get rid of the libqxt
   dependency on windows.
   The QtLockedFile is under the BSD license.

(2012-01-19)
 * The title of youtube videos is displayed correctly. And the stream url is 
   replaced by the url of the youtube page.

(2012-01-14)
 * Added the Croatian translation, by jk <marshsmello@gmail.com>

(2012-01-12)
 * Detect asx, m3u, pls, and ram streams and pass -playlist to mplayer, so
   the user doesn't have to indicate if a url is a playlist.

(2012-01-11)
 * Added an option in preferences -> performance to select the desired
   quality for youtube videos.

(2012-01-11)
 * Added a very basic support for youtube. Now you can open urls like
   http://www.youtube.com/watch?v=dq4Oj5quskI in smplayer (Open -> URL). 
   You can also drag and drop a link from a browser to the smplayer window.

(2012-01-04)
 * New option "Hide video window when playing audio files" in 
   preferences -> interface.


[b]Version 0.6.10[/b]:

(2011-12-06)
 * Added a vdpau configuration dialog, now it's possible to select which 
   vdpau codecs to use.

(2011-12-05)
 * Patch by Silvan Scherrer <silvan.scherrer@aroa.ch> to add support for
   eCS, OS/2.

(2011-12-03)
 * Removed the option "Visualize motion vectors". It caused problems to many
   people when activated by mistake.

(2010-12-07)
 * Added a submenu to select the closed caption channel. 
   Requires mplayer >= r32607.

(2010-09-03)
 * Added webm and vp8 to the list of extensions (for video).

(2010-07-30)
 * Added thd to the list of extensions (for audio).

(2010-04-28)